# FEAssembly

./: CMakeLists.txt  README.md
slurm/: blake.slurm.sh
src/: CMakeLists.txt  main.cpp
