
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(APPLE)
    SET(CMAKE_MACOSX_RPATH TRUE)

    SET(CMAKE_C_COMPILER icc)
    SET(CMAKE_CXX_COMPILER icpc)
    SET(CMAKE_CXX_FLAGS "-g -O3 -fopenmp -mkl")

ELSE()

    SET(CMAKE_C_COMPILER mpicc)
    SET(CMAKE_CXX_COMPILER mpicxx)
    SET(CMAKE_CXX_FLAGS "-g -O3 -xCommon-AVX512 -fopenmp -mkl")

ENDIF()

ADD_SUBDIRECTORY( src )
